# ow_autonomy

./: CMakeLists.txt  README.md  git-policy.md  package.xml
launch/: autonomy_node.launch
msg/: NewPlan.msg  PlanStatus.msg
ow_plexil/: CMakeLists.txt  package.xml
ow_plexil/msg/: CurrentOperation.msg  CurrentPlan.msg  CurrentTask.msg
ow_plexil/src/: ow_plexil.cpp
ow_plexil/src/plans/: Exca.plp  ExcavationPlan1.plp  TestExcavation.plp  ow-config.xml  plan-interface.h
ow_plexil/src/plexil-adapter/: CommonAdapter.h  OwAdapter.cpp  OwAdapter.h  OwExecutive.cpp  OwExecutive.h  OwInterface.cpp  OwInterface.h  PlexilPlanSelection.cpp  PlexilPlanSelection.h
src/: ow-config.xml
src/plans/: plan-interface.h
src/plexil-adapter/: CMakeLists.txt  OwAdapter.cpp  OwAdapter.h  OwExecutive.cpp  OwExecutive.h  OwInterface.cpp  OwInterface.h  OwSimProxy.cpp  autonomy_node.cpp  planner_node.cpp
